# Async-HTTP-Fetcher

./: .gitignore  README.md  benchmark-results.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BENCHMARK_SCRIPT.md  CI_CD_DURUM_RAPORU.md  CI_CD_PIPELINE_DUZELTMELERI.md  CI_CD_TROUBLESHOOTING.md  README.md  TECHNICAL_DOCUMENTATION.md  USAGE_GUIDE.md  comprehension.md  decorator_vs_context.md
examples/: auth_fetcher.py
src/async_fetcher/: __init__.py
src/async_fetcher/fetcher/: fetcher.py  fetcher_logger.py
src/async_fetcher/utils/: timer.py
src/fetcher/: __init__.py  fetcher.py  fetcher_logger.py
src/utils/: __init__.py  context_utils.py  logging_policy.py
tests/benchmark/: __init__.py  test_benchmarks.py
tests/fetcher/: test_fetcher.py  test_fetcher_mock.py
tests/utils/: test_context_utils.py  test_timer.py  test_timer_async.py  test_timer_clean.py
